[package]
name = "k8s_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crossterm = "0.26.0"
futures = "0.3.26"
hyper = "0.14.24"
kube-derive = "0.78.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
serde_json = "1.0.93"
serde = "1.0.152"
