[package]
name = "kube_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
kube = "0.78.0"
serde = "1.0.152"
serde_json = "1.0.93"
validator = "0.16.0"
